[gd_scene load_steps=122 format=2]

[ext_resource path="res://pck/assets/bugyee/Player.gd" type="Script" id=1]
[ext_resource path="res://pck/assets/shankoemee/lose.png" type="Texture" id=2]
[ext_resource path="res://pck/assets/common/panel-1.png" type="Texture" id=3]
[ext_resource path="res://pck/assets/bugyee/label-1.png" type="Texture" id=4]
[ext_resource path="res://pck/assets/common/profiles/0.png" type="Texture" id=5]
[ext_resource path="res://pck/assets/common/emoji/E1/emoji_1_00033.png" type="Texture" id=6]
[ext_resource path="res://pck/assets/common/emoji/E1/emoji_1_00039.png" type="Texture" id=7]
[ext_resource path="res://pck/assets/common/emoji/E1/emoji_1_00042.png" type="Texture" id=8]
[ext_resource path="res://pck/assets/common/emoji/E1/emoji_1_00012.png" type="Texture" id=9]
[ext_resource path="res://pck/assets/common/emoji/E1/emoji_1_00024.png" type="Texture" id=10]
[ext_resource path="res://pck/assets/common/profile-frame.png" type="Texture" id=11]
[ext_resource path="res://pck/assets/common/emoji/E2/emoji_2_00021.png" type="Texture" id=12]
[ext_resource path="res://pck/assets/common/zawgyi-one.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://pck/assets/common/cards/back.png" type="Texture" id=14]
[ext_resource path="res://pck/assets/common/WINRESEA.TTF" type="DynamicFontData" id=15]
[ext_resource path="res://pck/assets/common/joystick.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://pck/assets/common/messages/bet_more.png" type="Texture" id=17]
[ext_resource path="res://pck/assets/common/emoji/E2/emoji_2_00024.png" type="Texture" id=18]
[ext_resource path="res://pck/assets/common/emoji/E1/emoji_1_00045.png" type="Texture" id=19]
[ext_resource path="res://pck/assets/common/emoji/E1/emoji_1_00000.png" type="Texture" id=20]
[ext_resource path="res://pck/assets/common/emoji/E2/emoji_2_00033.png" type="Texture" id=21]
[ext_resource path="res://pck/assets/common/emoji/E2/emoji_2_00036.png" type="Texture" id=22]
[ext_resource path="res://pck/assets/common/emoji/E2/emoji_2_00015.png" type="Texture" id=23]
[ext_resource path="res://pck/assets/common/emoji/E2/emoji_2_00027.png" type="Texture" id=24]
[ext_resource path="res://pck/assets/common/emoji/E2/emoji_2_00000.png" type="Texture" id=25]
[ext_resource path="res://pck/assets/common/emoji/E1/emoji_1_00027.png" type="Texture" id=26]
[ext_resource path="res://pck/assets/common/emoji/E1/emoji_1_00036.png" type="Texture" id=27]
[ext_resource path="res://pck/assets/common/emoji/E2/emoji_2_00012.png" type="Texture" id=28]
[ext_resource path="res://pck/assets/common/emoji/E2/emoji_2_00030.png" type="Texture" id=29]
[ext_resource path="res://pck/assets/common/emoji/E2/emoji_2_00039.png" type="Texture" id=30]
[ext_resource path="res://pck/assets/common/emoji/E1/emoji_1_00021.png" type="Texture" id=31]
[ext_resource path="res://pck/assets/common/emoji/E1/emoji_1_00003.png" type="Texture" id=32]
[ext_resource path="res://pck/assets/common/emoji/E1/emoji_1_00018.png" type="Texture" id=33]
[ext_resource path="res://pck/assets/common/emoji/E1/emoji_1_00030.png" type="Texture" id=34]
[ext_resource path="res://pck/assets/common/emoji/E2/emoji_2_00003.png" type="Texture" id=35]
[ext_resource path="res://pck/assets/common/emoji/E2/emoji_2_00006.png" type="Texture" id=36]
[ext_resource path="res://pck/assets/common/emoji/E2/emoji_2_00009.png" type="Texture" id=37]
[ext_resource path="res://pck/assets/common/emoji/E1/emoji_1_00006.png" type="Texture" id=38]
[ext_resource path="res://pck/assets/common/emoji/E2/emoji_2_00018.png" type="Texture" id=39]
[ext_resource path="res://pck/assets/common/emoji/E1/emoji_1_00015.png" type="Texture" id=40]
[ext_resource path="res://pck/assets/common/emoji/E1/emoji_1_00009.png" type="Texture" id=41]
[ext_resource path="res://pck/assets/common/emoji/E3/emoji_3_00003.png" type="Texture" id=42]
[ext_resource path="res://pck/assets/common/emoji/E3/emoji_3_00009.png" type="Texture" id=43]
[ext_resource path="res://pck/assets/common/emoji/E3/emoji_3_00006.png" type="Texture" id=44]
[ext_resource path="res://pck/assets/common/emoji/E3/emoji_3_00000.png" type="Texture" id=45]
[ext_resource path="res://pck/assets/common/emoji/E2/emoji_2_00042.png" type="Texture" id=46]
[ext_resource path="res://pck/assets/common/emoji/E2/emoji_2_00045.png" type="Texture" id=47]
[ext_resource path="res://pck/assets/common/emoji/E4/emoji_4_00006.png" type="Texture" id=48]
[ext_resource path="res://pck/assets/common/emoji/E3/emoji_3_00024.png" type="Texture" id=49]
[ext_resource path="res://pck/assets/common/emoji/E4/emoji_4_00045.png" type="Texture" id=50]
[ext_resource path="res://pck/assets/common/emoji/E6/emoji_6_00000.png" type="Texture" id=51]
[ext_resource path="res://pck/assets/common/emoji/E3/emoji_3_00012.png" type="Texture" id=52]
[ext_resource path="res://pck/assets/common/emoji/E3/emoji_3_00018.png" type="Texture" id=53]
[ext_resource path="res://pck/assets/common/emoji/E5/emoji_5_00024.png" type="Texture" id=54]
[ext_resource path="res://pck/assets/common/emoji/E5/emoji_5_00045.png" type="Texture" id=55]
[ext_resource path="res://pck/assets/common/emoji/E6/emoji_6_00039.png" type="Texture" id=56]
[ext_resource path="res://pck/assets/common/emoji/E4/emoji_4_00015.png" type="Texture" id=57]
[ext_resource path="res://pck/assets/common/emoji/E5/emoji_5_00000.png" type="Texture" id=58]
[ext_resource path="res://pck/assets/common/emoji/E5/emoji_5_00003.png" type="Texture" id=59]
[ext_resource path="res://pck/assets/common/emoji/E5/emoji_5_00033.png" type="Texture" id=60]
[ext_resource path="res://pck/assets/common/emoji/E3/emoji_3_00030.png" type="Texture" id=61]
[ext_resource path="res://pck/assets/common/emoji/E3/emoji_3_00033.png" type="Texture" id=62]
[ext_resource path="res://pck/assets/common/emoji/E4/emoji_4_00030.png" type="Texture" id=63]
[ext_resource path="res://pck/assets/common/emoji/E5/emoji_5_00015.png" type="Texture" id=64]
[ext_resource path="res://pck/assets/common/emoji/E3/emoji_3_00036.png" type="Texture" id=65]
[ext_resource path="res://pck/assets/common/emoji/E4/emoji_4_00009.png" type="Texture" id=66]
[ext_resource path="res://pck/assets/common/emoji/E4/emoji_4_00036.png" type="Texture" id=67]
[ext_resource path="res://pck/assets/common/emoji/E4/emoji_4_00042.png" type="Texture" id=68]
[ext_resource path="res://pck/assets/common/emoji/E5/emoji_5_00027.png" type="Texture" id=69]
[ext_resource path="res://pck/assets/common/emoji/E5/emoji_5_00030.png" type="Texture" id=70]
[ext_resource path="res://pck/assets/common/emoji/E3/emoji_3_00042.png" type="Texture" id=71]
[ext_resource path="res://pck/assets/common/emoji/E5/emoji_5_00018.png" type="Texture" id=72]
[ext_resource path="res://pck/assets/common/emoji/E5/emoji_5_00021.png" type="Texture" id=73]
[ext_resource path="res://pck/assets/common/emoji/E5/emoji_5_00036.png" type="Texture" id=74]
[ext_resource path="res://pck/assets/common/emoji/E6/emoji_6_00009.png" type="Texture" id=75]
[ext_resource path="res://pck/assets/common/emoji/E6/emoji_6_00012.png" type="Texture" id=76]
[ext_resource path="res://pck/assets/common/emoji/E4/emoji_4_00003.png" type="Texture" id=77]
[ext_resource path="res://pck/assets/common/emoji/E3/emoji_3_00045.png" type="Texture" id=78]
[ext_resource path="res://pck/assets/common/emoji/E3/emoji_3_00039.png" type="Texture" id=79]
[ext_resource path="res://pck/assets/common/emoji/E6/emoji_6_00015.png" type="Texture" id=80]
[ext_resource path="res://pck/assets/common/emoji/E6/emoji_6_00018.png" type="Texture" id=81]
[ext_resource path="res://pck/assets/common/emoji/E4/emoji_4_00027.png" type="Texture" id=82]
[ext_resource path="res://pck/assets/common/emoji/E6/emoji_6_00021.png" type="Texture" id=83]
[ext_resource path="res://pck/assets/common/emoji/E4/emoji_4_00000.png" type="Texture" id=84]
[ext_resource path="res://pck/assets/common/emoji/E6/emoji_6_00024.png" type="Texture" id=85]
[ext_resource path="res://pck/assets/common/emoji/E6/emoji_6_00027.png" type="Texture" id=86]
[ext_resource path="res://pck/assets/common/emoji/E6/emoji_6_00042.png" type="Texture" id=87]
[ext_resource path="res://pck/assets/common/emoji/E4/emoji_4_00039.png" type="Texture" id=88]
[ext_resource path="res://pck/assets/common/emoji/E6/emoji_6_00006.png" type="Texture" id=89]
[ext_resource path="res://pck/assets/common/emoji/E4/emoji_4_00012.png" type="Texture" id=90]
[ext_resource path="res://pck/assets/common/emoji/E5/emoji_5_00042.png" type="Texture" id=91]
[ext_resource path="res://pck/assets/common/emoji/E3/emoji_3_00021.png" type="Texture" id=92]
[ext_resource path="res://pck/assets/common/emoji/E4/emoji_4_00018.png" type="Texture" id=93]
[ext_resource path="res://pck/assets/common/emoji/E6/emoji_6_00003.png" type="Texture" id=94]
[ext_resource path="res://pck/assets/common/emoji/E4/emoji_4_00021.png" type="Texture" id=95]
[ext_resource path="res://pck/assets/common/emoji/E6/emoji_6_00033.png" type="Texture" id=96]
[ext_resource path="res://pck/assets/common/emoji/E5/emoji_5_00039.png" type="Texture" id=97]
[ext_resource path="res://pck/assets/common/emoji/E3/emoji_3_00027.png" type="Texture" id=98]
[ext_resource path="res://pck/assets/common/emoji/E4/emoji_4_00024.png" type="Texture" id=99]
[ext_resource path="res://pck/assets/common/emoji/E3/emoji_3_00015.png" type="Texture" id=100]
[ext_resource path="res://pck/assets/common/emoji/E5/emoji_5_00006.png" type="Texture" id=101]
[ext_resource path="res://pck/assets/common/emoji/E5/emoji_5_00012.png" type="Texture" id=102]
[ext_resource path="res://pck/assets/common/emoji/E5/emoji_5_00009.png" type="Texture" id=103]
[ext_resource path="res://pck/assets/common/emoji/E6/emoji_6_00030.png" type="Texture" id=104]
[ext_resource path="res://pck/assets/common/emoji/E6/emoji_6_00036.png" type="Texture" id=105]
[ext_resource path="res://pck/assets/common/emoji/E6/emoji_6_00045.png" type="Texture" id=106]
[ext_resource path="res://pck/assets/common/emoji/E4/emoji_4_00033.png" type="Texture" id=107]

[sub_resource type="DynamicFont" id=276]
size = 35
font_data = ExtResource( 16 )

[sub_resource type="Animation" id=277]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Label:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Label:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Label:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Label:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Label:rect_position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( -60, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Label:rect_position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=278]
resource_name = "show"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("Label:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1.5, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Label:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -60, -0.25, 0, 0.25, 0, -60, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1.5, 2 )
}

[sub_resource type="DynamicFont" id=275]
size = 35
font_data = ExtResource( 16 )

[sub_resource type="StyleBoxTexture" id=267]
texture = ExtResource( 3 )
region_rect = Rect2( 0, -10, 200, 210 )
margin_left = 60.0
margin_right = 60.0
margin_top = 80.0
margin_bottom = 60.0

[sub_resource type="DynamicFont" id=268]
size = 15
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=283]
size = 25
font_data = ExtResource( 13 )

[sub_resource type="SpriteFrames" id=269]
animations = [ {
"frames": [ ExtResource( 20 ), ExtResource( 32 ), ExtResource( 38 ), ExtResource( 41 ), ExtResource( 9 ), ExtResource( 40 ), ExtResource( 33 ), ExtResource( 31 ), ExtResource( 10 ), ExtResource( 26 ), ExtResource( 34 ), ExtResource( 6 ), ExtResource( 27 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 19 ) ],
"loop": true,
"name": "e1",
"speed": 8.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 28 ), ExtResource( 23 ), ExtResource( 39 ), ExtResource( 12 ), ExtResource( 18 ), ExtResource( 24 ), ExtResource( 29 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 30 ), ExtResource( 46 ), ExtResource( 47 ) ],
"loop": true,
"name": "e2",
"speed": 8.0
}, {
"frames": [ ExtResource( 45 ), ExtResource( 42 ), ExtResource( 44 ), ExtResource( 43 ), ExtResource( 52 ), ExtResource( 100 ), ExtResource( 53 ), ExtResource( 92 ), ExtResource( 49 ), ExtResource( 98 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 65 ), ExtResource( 79 ), ExtResource( 71 ), ExtResource( 78 ) ],
"loop": true,
"name": "e3",
"speed": 8.0
}, {
"frames": [ ExtResource( 84 ), ExtResource( 77 ), ExtResource( 48 ), ExtResource( 66 ), ExtResource( 90 ), ExtResource( 57 ), ExtResource( 93 ), ExtResource( 95 ), ExtResource( 99 ), ExtResource( 82 ), ExtResource( 63 ), ExtResource( 107 ), ExtResource( 67 ), ExtResource( 88 ), ExtResource( 68 ), ExtResource( 50 ) ],
"loop": true,
"name": "e4",
"speed": 8.0
}, {
"frames": [ ExtResource( 58 ), ExtResource( 59 ), ExtResource( 101 ), ExtResource( 103 ), ExtResource( 102 ), ExtResource( 64 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 54 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 60 ), ExtResource( 74 ), ExtResource( 97 ), ExtResource( 91 ), ExtResource( 55 ) ],
"loop": true,
"name": "e5",
"speed": 8.0
}, {
"frames": [ ExtResource( 51 ), ExtResource( 94 ), ExtResource( 89 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 80 ), ExtResource( 81 ), ExtResource( 83 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 104 ), ExtResource( 96 ), ExtResource( 105 ), ExtResource( 56 ), ExtResource( 87 ), ExtResource( 106 ) ],
"loop": true,
"name": "e6",
"speed": 8.0
} ]

[sub_resource type="DynamicFont" id=279]
size = 40
font_data = ExtResource( 15 )

[sub_resource type="Animation" id=280]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("BG:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("BG:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 50, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=281]
resource_name = "hide"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("BG:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("BG:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 50, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[sub_resource type="Animation" id=282]
resource_name = "show"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("BG:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("BG:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 50, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[sub_resource type="Animation" id=284]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Message:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1e-05, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Message:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1e-05, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=285]
resource_name = "show"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("Message:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1e-05, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 1e-05, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 1.6, 1.8, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Message:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1e-05, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 1e-05, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 1.6, 1.8, 2 )
}

[node name="Player" type="Node2D"]
position = Vector2( 900, 720 )
script = ExtResource( 1 )

[node name="TransferBalance" type="Node2D" parent="."]
position = Vector2( 0, -60 )
z_index = 2

[node name="Label" type="Label" parent="TransferBalance"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -60.0
margin_right = 60.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.588235 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 276 )
text = "+1000"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="TransferBalance"]
anims/RESET = SubResource( 277 )
anims/show = SubResource( 278 )

[node name="Profile" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="Frame" type="Sprite" parent="Profile"]
z_index = 1
texture = ExtResource( 11 )

[node name="Bet" type="Label" parent="Profile"]
margin_left = -60.0
margin_top = -90.0
margin_right = -20.0
margin_bottom = -50.0
custom_fonts/font = SubResource( 275 )
text = "x2"
align = 1
valign = 1

[node name="Panel" type="Panel" parent="."]
margin_left = -60.0
margin_top = 60.0
margin_right = 60.0
margin_bottom = 140.0
custom_styles/panel = SubResource( 267 )

[node name="Nickname" type="Label" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 10.0
margin_bottom = -40.0
custom_fonts/font = SubResource( 268 )
text = "Nickname"
align = 1
valign = 1

[node name="Balance" type="Label" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 30.0
custom_colors/font_color = Color( 0.917647, 0.909804, 0.529412, 1 )
custom_fonts/font = SubResource( 283 )
text = "3000"
align = 1
valign = 1

[node name="ResultFlag" type="Sprite" parent="."]
position = Vector2( 0, -30 )
z_index = 2
texture = ExtResource( 2 )

[node name="Emoji" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 1.5, 1.5 )
z_index = 1
frames = SubResource( 269 )
animation = "e1"
frame = 14
playing = true

[node name="CardPos" type="Node2D" parent="."]
position = Vector2( 200, 20 )

[node name="card1" type="Sprite" parent="CardPos"]
position = Vector2( -40, -60 )
scale = Vector2( 0.17, 0.17 )
z_index = 1
texture = ExtResource( 14 )

[node name="card2" type="Sprite" parent="CardPos"]
position = Vector2( 40, -60 )
scale = Vector2( 0.17, 0.17 )
z_index = 1
texture = ExtResource( 14 )

[node name="card3" type="Sprite" parent="CardPos"]
position = Vector2( -80, 60 )
scale = Vector2( 0.17, 0.17 )
z_index = 1
texture = ExtResource( 14 )

[node name="card4" type="Sprite" parent="CardPos"]
position = Vector2( 0, 60 )
scale = Vector2( 0.17, 0.17 )
z_index = 1
texture = ExtResource( 14 )

[node name="card5" type="Sprite" parent="CardPos"]
position = Vector2( 80, 60 )
scale = Vector2( 0.17, 0.17 )
z_index = 1
texture = ExtResource( 14 )

[node name="CardStatus" type="Node2D" parent="."]
position = Vector2( 200, 112 )
z_index = 2

[node name="BG" type="Sprite" parent="CardStatus"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, 50 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="CardStatus/BG"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -120.0
margin_top = -30.0
margin_right = -120.0
margin_bottom = -30.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 279 )
text = " "
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CardStatus"]
anims/RESET = SubResource( 280 )
anims/hide = SubResource( 281 )
anims/show = SubResource( 282 )

[node name="Message" type="Sprite" parent="."]
scale = Vector2( 1e-05, 1e-05 )
z_index = 2
texture = ExtResource( 17 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Message"]
root_node = NodePath("../..")
anims/RESET = SubResource( 284 )
anims/show = SubResource( 285 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
